force-app/main/default/objects/Order_Woocomerce__c/Order_Woocomerce__c.object-meta.xml
<CustomObject>
    <label>Order Woocomerce</label>
    <nameField>
        <label>Nombre de Order Woocomerce</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orders Woocomerce</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>