force-app/main/default/objects/Order_Woocomerce__c/fields/Cuenta__c.field-meta.xml
<CustomField>
    <fullName>Cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Cuenta</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders Woocomerce</relationshipLabel>
    <relationshipName>Orders_Woocomerce</relationshipName>
    <type>Lookup</type>
</CustomField>