force-app/main/default/objects/Order_Woocomerce__c/fields/Lista_de_precios__c.field-meta.xml
<CustomField>
    <fullName>Lista_de_precios__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lista de precios</label>
    <referenceTo>Pricebook2</referenceTo>
    <relationshipLabel>Orders Woocomerce</relationshipLabel>
    <relationshipName>Orders_Woocomerce</relationshipName>
    <type>Lookup</type>
</CustomField>