force-app/main/default/objects/Order_Woocomerce__c/fields/Pedido__c.field-meta.xml
<CustomField>
    <fullName>Pedido__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pedido</label>
    <referenceTo>Order</referenceTo>
    <relationshipLabel>Orders Woocomerce</relationshipLabel>
    <relationshipName>Orders_Woocomerce</relationshipName>
    <type>Lookup</type>
</CustomField>